Cancel button looks improperly aligned without the focus ring around it. Fixes #647

--- a/AzureFunctions.Client/styles/main.css
+++ b/AzureFunctions.Client/styles/main.css
@@ -100,6 +100,15 @@ pre {
     background-color: #539CF6;
 }
 
+.custom-button {
+    border: 1px solid transparent;
+}
+
+.custom-button-invert {
+    border: 2px solid #539CF6;
+}
+
+
 .custom-button-invert{
     background-color: #FFF;
     color: #539CF6;
